--- a/Text Mining Project - Riccardo Cervero_794126.ipynb
+++ b/Text Mining Project - Riccardo Cervero_794126.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Text Mining Project (Resumed).ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -22,8 +21,9 @@
         "colab_type": "text"
       },
       "source": [
-        "#**Text Mining Project**\n",
-        "##**Riccardo Cervero, 794126**\n"
+        "#**Text Mining & Search - Final Project**\n",
+        "##**Riccardo Cervero, 794126**\n",
+        "##Università degli Studi di Milano Bicocca, A.Y. 2019-2020\n"
       ]
     },
     {
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "_9ot0-2LxGo0",
         "colab_type": "code",
-        "outputId": "d17e0beb-066d-48d5-93c7-fff14070de18",
+        "outputId": "0bbbb7d8-9287-421e-ab19-2baea420cca8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -59,15 +59,15 @@
         "import warnings\n",
         "import random"
       ],
-      "execution_count": 2,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -836,7 +836,6 @@
         "def weighting(input,weight):\n",
         "  #Preprocess the input\n",
         "  sentences_cleaned = [text_preprocessing(y) for y in (sent_tokenize(input))]\n",
-        "  #Compute occurence of each word for each sentence\n",
         "  DFs = []\n",
         "  if weight == \"f\":\n",
         "    for sent in sentences_cleaned:\n",
@@ -1306,6 +1305,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PTD5qcizA1xA",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is just an experiment using a second TextRank Variation, but this method will not be furtherly tested."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xc3wG7bcSo04",
@@ -1740,7 +1749,7 @@
         "import warnings\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1777,7 +1786,6 @@
         "colab": {}
       },
       "source": [
-        "#Reduce dataset dimensions\n",
         "db = db[['Text','Summary']]\n",
         "db.columns = ['text','summary']"
       ],
@@ -1936,7 +1944,7 @@
         "colab_type": "text"
       },
       "source": [
-        "It is now necessary to performe a rare words analysis and tokenize training set reviews and summaries:"
+        "It is now necessary to perform a rare words analysis and tokenize both training set reviews and summaries:"
       ]
     },
     {
@@ -2032,7 +2040,7 @@
         "x_tr = pad_sequences(x_tr_seq,  maxlen=max_text_len, padding='post')\n",
         "x_val = pad_sequences(x_val_seq, maxlen=max_text_len, padding='post')\n",
         "\n",
-        "#Print size of vocabulary ( +1 for padding token)\n",
+        "#Print size of vocabulary (+1 for padding token)\n",
         "x_voc = x_tokenizer.num_words + 1\n",
         "print(\"Size of vocabulary in X = {}\".format(x_voc))"
       ],
@@ -2055,7 +2063,7 @@
         "colab": {}
       },
       "source": [
-        "#Prepare a tokenizer for reviews on training data\n",
+        "#Prepare a tokenizer for summaries in training data\n",
         "y_tokenizer = Tokenizer()   \n",
         "y_tokenizer.fit_on_texts(list(y_tr))"
       ],
@@ -2109,7 +2117,7 @@
         "colab_type": "text"
       },
       "source": [
-        "As for as summaries, setting a threshold equal to 6, the global vocabulary related to the them in the training set is composed of rare words for about the 73.6%."
+        "As for as summaries, setting a threshold equal to 6, the global vocabulary related to them in the training set is composed of rare words for about the 73.6%."
       ]
     },
     {
@@ -2124,7 +2132,7 @@
         }
       },
       "source": [
-        "#Prepare a tokenizer for reviews on training data\n",
+        "#Prepare a tokenizer for summaries in training data\n",
         "y_tokenizer = Tokenizer(num_words=tot_cnt-cnt) \n",
         "y_tokenizer.fit_on_texts(list(y_tr))\n",
         "\n",
@@ -2136,7 +2144,7 @@
         "y_tr = pad_sequences(y_tr_seq, maxlen=max_summary_len, padding='post')\n",
         "y_val = pad_sequences(y_val_seq, maxlen=max_summary_len, padding='post')\n",
         "\n",
-        "#size of vocabulary\n",
+        "#Print size of vocabulary (+1 for padding token)\n",
         "y_voc = y_tokenizer.num_words +1\n",
         "print(\"Size of vocabulary in Y = {}\".format(y_voc))"
       ],
@@ -2195,7 +2203,7 @@
         "colab_type": "text"
       },
       "source": [
-        "it is finally possible to write the **Sequence-to-sequence Model**."
+        "It is finally possible to write the **Sequence-to-sequence Model**. Anyway, first step consists in building the \"Attention Block\":"
       ]
     },
     {
@@ -2206,14 +2214,12 @@
         "colab": {}
       },
       "source": [
-        "#Create Attention Block\n",
-        "\n",
         "import tensorflow as tf\n",
         "import os\n",
         "from tensorflow.python.keras.layers import Layer\n",
         "from tensorflow.python.keras import backend as K\n",
         "\n",
-        "#Bahdanau Attention method\n",
+        "#Create Attention Block with Bahdanau Attention method\n",
         "\n",
         "class AttentionLayer(Layer):\n",
         "    \n",
@@ -2222,7 +2228,6 @@
         "\n",
         "    def build(self, input_shape):\n",
         "        assert isinstance(input_shape, list)\n",
-        "        # Create a trainable weight variable for this layer.\n",
         "\n",
         "        self.W_a = self.add_weight(name='W_a',\n",
         "                                   shape=tf.TensorShape((input_shape[0][2], input_shape[0][2])),\n",
@@ -2237,7 +2242,7 @@
         "                                   initializer='uniform',\n",
         "                                   trainable=True)\n",
         "\n",
-        "        super(AttentionLayer, self).build(input_shape)  # Be sure to call this at the end\n",
+        "        super(AttentionLayer, self).build(input_shape)  \n",
         "\n",
         "    def call(self, inputs, verbose=False):\n",
         "        \"\"\"\n",
@@ -2260,28 +2265,23 @@
         "            de_hidden = inputs.shape[-1]\n",
         "\n",
         "            \"\"\" Computing S.Wa where S=[s0, s1, ..., si]\"\"\"\n",
-        "            # <= batch_size*en_seq_len, latent_dim\n",
         "            reshaped_enc_outputs = K.reshape(encoder_out_seq, (-1, en_hidden))\n",
-        "            # <= batch_size*en_seq_len, latent_dim\n",
         "            W_a_dot_s = K.reshape(K.dot(reshaped_enc_outputs, self.W_a), (-1, en_seq_len, en_hidden))\n",
         "            if verbose:\n",
         "                print('wa.s>',W_a_dot_s.shape)\n",
         "\n",
         "            \"\"\" Computing hj.Ua \"\"\"\n",
-        "            U_a_dot_h = K.expand_dims(K.dot(inputs, self.U_a), 1)  # <= batch_size, 1, latent_dim\n",
+        "            U_a_dot_h = K.expand_dims(K.dot(inputs, self.U_a), 1) \n",
         "            if verbose:\n",
         "                print('Ua.h>',U_a_dot_h.shape)\n",
         "\n",
         "            \"\"\" tanh(S.Wa + hj.Ua) \"\"\"\n",
-        "            # <= batch_size*en_seq_len, latent_dim\n",
         "            reshaped_Ws_plus_Uh = K.tanh(K.reshape(W_a_dot_s + U_a_dot_h, (-1, en_hidden)))\n",
         "            if verbose:\n",
         "                print('Ws+Uh>', reshaped_Ws_plus_Uh.shape)\n",
         "\n",
         "            \"\"\" softmax(va.tanh(S.Wa + hj.Ua)) \"\"\"\n",
-        "            # <= batch_size, en_seq_len\n",
         "            e_i = K.reshape(K.dot(reshaped_Ws_plus_Uh, self.V_a), (-1, en_seq_len))\n",
-        "            # <= batch_size, en_seq_len\n",
         "            e_i = K.softmax(e_i)\n",
         "\n",
         "            if verbose:\n",
@@ -2291,25 +2291,22 @@
         "\n",
         "        def context_step(inputs, states):\n",
         "            \"\"\" Step function for computing ci using ei \"\"\"\n",
-        "            # <= batch_size, hidden_size\n",
         "            c_i = K.sum(encoder_out_seq * K.expand_dims(inputs, -1), axis=1)\n",
         "            if verbose:\n",
         "                print('ci>', c_i.shape)\n",
         "            return c_i, [c_i]\n",
         "\n",
         "        def create_inital_state(inputs, hidden_size):\n",
-        "            # We are not using initial states, but need to pass something to K.rnn funciton\n",
-        "            fake_state = K.zeros_like(inputs)  # <= (batch_size, enc_seq_len, latent_dim\n",
-        "            fake_state = K.sum(fake_state, axis=[1, 2])  # <= (batch_size)\n",
-        "            fake_state = K.expand_dims(fake_state)  # <= (batch_size, 1)\n",
-        "            fake_state = K.tile(fake_state, [1, hidden_size])  # <= (batch_size, latent_dim\n",
+        "            fake_state = K.zeros_like(inputs)  \n",
+        "            fake_state = K.sum(fake_state, axis=[1, 2])  \n",
+        "            fake_state = K.expand_dims(fake_state)  \n",
+        "            fake_state = K.tile(fake_state, [1, hidden_size])  \n",
         "            return fake_state\n",
         "\n",
         "        fake_state_c = create_inital_state(encoder_out_seq, encoder_out_seq.shape[-1])\n",
-        "        fake_state_e = create_inital_state(encoder_out_seq, encoder_out_seq.shape[1])  # <= (batch_size, enc_seq_len, latent_dim\n",
+        "        fake_state_e = create_inital_state(encoder_out_seq, encoder_out_seq.shape[1])  \n",
         "\n",
         "        \"\"\" Computing energy outputs \"\"\"\n",
-        "        # e_outputs => (batch_size, de_seq_len, en_seq_len)\n",
         "        last_out, e_outputs, _ = K.rnn(\n",
         "            energy_step, decoder_out_seq, [fake_state_e],\n",
         "        )\n",
@@ -2680,21 +2677,20 @@
         "encoder_model = Model(inputs=encoder_inputs,outputs=[encoder_outputs, state_h, state_c])\n",
         "\n",
         "#Decoder setup\n",
-        "#Below tensors will hold the states of the previous time step\n",
+        "#This tensors will hold the states of the previous time step\n",
         "decoder_state_input_h = Input(shape=(latent_dim,))\n",
         "decoder_state_input_c = Input(shape=(latent_dim,))\n",
         "decoder_hidden_state_input = Input(shape=(max_text_len,latent_dim))\n",
         "\n",
         "#Get the embeddings of the decoder sequence\n",
         "dec_emb2= dec_emb_layer(decoder_inputs) \n",
-        "#To predict the next word in the sequence, set the initial states to the states from the previous time step\n",
         "decoder_outputs2, state_h2, state_c2 = decoder_lstm(dec_emb2, initial_state=[decoder_state_input_h, decoder_state_input_c])\n",
         "\n",
         "#Attention inference\n",
         "attn_out_inf, attn_states_inf = attn_layer([decoder_hidden_state_input, decoder_outputs2])\n",
         "decoder_inf_concat = Concatenate(axis=-1, name='concat')([decoder_outputs2, attn_out_inf])\n",
         "\n",
-        "#A dense softmax layer to generate prob dist. over the target vocabulary\n",
+        "#A dense softmax layer to generate prob distribution over the target vocabulary\n",
         "decoder_outputs2 = decoder_dense(decoder_inf_concat) \n",
         "\n",
         "#Final inference model\n",
@@ -2797,10 +2793,10 @@
         "    #Encode the input as state vectors.\n",
         "    e_out, e_h, e_c = encoder_model.predict(input_seq)\n",
         "    \n",
-        "    #Generate empty target sequence of length 1.\n",
+        "    #Generate empty target sequence of length 1\n",
         "    target_seq = np.zeros((1,1))\n",
         "    \n",
-        "    #Populate the first word of target sequence with the start word.\n",
+        "    #Populate the first word of target sequence with the start word\n",
         "    target_seq[0, 0] = target_word_index['sostok']\n",
         "\n",
         "    stop_condition = False\n",
@@ -2816,11 +2812,11 @@
         "        if(sampled_token!='eostok'):\n",
         "            decoded_sentence += ' '+sampled_token\n",
         "\n",
-        "        #Exit condition: either hit max length or find stop word.\n",
+        "        #Exit condition: either hit max length or find stop word\n",
         "        if (sampled_token == 'eostok'  or len(decoded_sentence.split()) >= (max_summary_len-1)):\n",
         "            stop_condition = True\n",
         "\n",
-        "        #Update the target sequence (of length 1).\n",
+        "        #Update the target sequence (of length 1)\n",
         "        target_seq = np.zeros((1,1))\n",
         "        target_seq[0, 0] = sampled_token_index\n",
         "\n",
@@ -2839,7 +2835,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Let us define the functions to convert an integer sequence to a word sequence for summary as well as the reviews:"
+        "Then, functions to convert an integer sequence to a word sequence for summary as well as the reviews are written:"
       ]
     },
     {
@@ -3434,16 +3430,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kQx7SdcOWhH7",
-        "colab_type": "text"
-      },
-      "source": [
-        "27 texts and summaries have been randomly selected from the dataset, in order to evaluate the performances of the summarizer:"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "C-o5SlgdYP-P",
@@ -3674,7 +3660,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Thus, the 27 predicted summaries will be generated with each method, and written into different files, for human analysis:"
+        "Thus, the 27 predicted summaries will be generated with each method, for human analysis:"
       ]
     },
     {
@@ -4310,6 +4296,26 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "92yjohAkl7Kz",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**References**\n",
+        "- [Text Summarization Methods](https://github.com/icoxfog417/awesome-text-summarization#transfer-learning)\n",
+        "- [Text Summarization in Python](https://towardsdatascience.com/text-summarization-in-python-76c0a41f0dc4)\n",
+        "- [TextRank Algorithm](https://www.analyticsvidhya.com/blog/2018/11/introduction-text-summarization-textrank-python/)\n",
+        "- [Gensim Summarizer](https://radimrehurek.com/gensim/summarization/summariser.html)\n",
+        "- [PyTextRank](https://github.com/DerwenAI/pytextrank/blob/master/example.py)\n",
+        "- [Luhn's Algorithm in Python](https://github.com/mohammadKhalifa/Luhn-s-summarizer)\n",
+        "- [Bert Extractive Summarizer](https://pypi.org/project/bert-extractive-summarizer/)\n",
+        "- [Abstractive Summarization with Keras](https://hackernoon.com/text-summarization-using-keras-models-366b002408d9)\n",
+        "- [Deep Learning for Text Summarization](https://www.analyticsvidhya.com/blog/2019/06/comprehensive-guide-text-summarization-using-deep-learning-python/)\n",
+        "- [Evaluation measures for Text Summarization](https://www.researchgate.net/publication/220106310_Evaluation_Measures_for_Text_Summarization)"
       ]
     }
   ]
